--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Aki Ariga <ariga@treasure-data.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-pytd = "^1.2"
+python = "^3.8"
+pytd = "=1.4.0"
 click = "^7.1.1"
+numpy = "^1.22"
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3.21"
